--- a/main/templates/main/link_form.html
+++ b/main/templates/main/link_form.html
@@ -7,7 +7,7 @@
 
 {% block main %}
 <p>Leave the "Link" field blank in order to start a new forum thread (please do not duplicate).</p>
-<form method="post">
+<form method="post">{% csrf_token %}
 <fieldset>{% fields_for form %}</fieldset>
 <div class="actions">
     <input class="btn btn-warning btn-large" type="submit" value="Submit">
